[package]
name = "config-ro"
version = "0.1.0"
edition = "2024"
description = "A thread-safe configuration manager for Rust applications that loads and caches JSON configuration files."
license = "MIT OR Apache-2.0"
authors = ["Kak Smko <ba.smko@example.com>"]
repository = "https://github.com/kak-smko/config-ro"
documentation = "https://docs.rs/config-ro"
readme = "README.md"
keywords = ["config", "configuration", "config-memory","application-config"]
categories = ["config", "data-structures", "filesystem"]


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
lazy_static = "1.5.0"
serde_json = "1.0.140"
